--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,8 @@
               <exclude>src/test/**/*.hdr</exclude>
               <exclude>src/main/resources/org/apache/commons/imaging/formats/xpm/rgb.txt</exclude>
               <exclude>.asf.yaml</exclude>
+              <exclude>codecov.SHA256SUM</exclude>
+              <exclude>codecov.SHA256SUM.sig</exclude>
             </excludes>
           </configuration>
         </plugin>
@@ -384,6 +386,8 @@
             <exclude>src/test/data/**/*.bmp</exclude>
             <exclude>src/test/data/**/*.tga</exclude>
             <exclude>src/test/data/**/*.hdr</exclude>
+            <exclude>codecov.SHA256SUM</exclude>
+            <exclude>codecov.SHA256SUM.sig</exclude>
             <exclude>src/main/resources/org/apache/commons/imaging/formats/xpm/rgb.txt</exclude>
             <exclude>.asf.yaml</exclude>
           </excludes>
